# JSON_AGENT

./: .env  README.md  __main__.py  agent.py  pyproject.toml  requirements.txt
JSON_AGENT_validation/: __main__.py  agent.py  deal_schema.json  pyproject.toml  schema_validator.py
JSON_AGENT_validation/__pycache__/: __init__.py
JSON_AGENT_validation/json_agent.egg-info/: PKG-INFO  SOURCES.txt
JSON_AGENT_validation/web/: app.py
JSON_AGENT_validation/web/static/: index.html
json_agent.egg-info/: README.md
json_agent.egg-info/json_agent.egg-info/: PKG-INFO  entry_points.txt
web/: app.py
web/web/static/: index.html
